force-app/main/default/objects/eRelease_Request__c/eRelease_Request__c.object-meta.xml
<CustomObject>
    <label>eRelease Request</label>
    <nameField>
        <displayFormat>ERR-{00000}</displayFormat>
        <label>eRelease Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eRelease Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>