force-app/main/default/objects/eRelease_Request__c/fields/All_Associated_Customer_Cases_Linked__c.field-meta.xml
<CustomField>
    <fullName>All_Associated_Customer_Cases_Linked__c</fullName>
    <inlineHelpText>Please verify that all associated Customer Cases are linked to the Bug ID specified in this request. If you answer &quot;Yes,&quot; then all known customer cases are linked to the Bug. Otherwise you are expect to have Cases linked to facilitate the request review.</inlineHelpText>
    <label>All Associated Customer Cases Linked</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable - No Customer Cases Logged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>