force-app/main/default/objects/eRelease_Request__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Application record pertinent to this request.</inlineHelpText>
    <label>Application</label>
    <referenceTo>ADM_Application__c</referenceTo>
    <relationshipLabel>eRelease Requests</relationshipLabel>
    <relationshipName>eRelease_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>