force-app/main/default/objects/eRelease_Request__c/fields/Bug_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Bug_Assignee__c</fullName>
    <label>Bug Assignee</label>
    <type>Email</type>
</CustomField>