force-app/main/default/objects/eRelease_Request__c/fields/Bug_Name__c.field-meta.xml
<CustomField>
    <fullName>Bug_Name__c</fullName>
    <description>This field is only used by the email templates used by the eRelease Request trigger for sending notification emails.</description>
    <formula>Bug_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bug Name</label>
    <type>Text</type>
</CustomField>