force-app/main/default/objects/eRelease_Request__c/fields/Bug_Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Bug_Product_Owner__c</fullName>
    <label>Bug Product Owner</label>
    <type>Email</type>
</CustomField>