force-app/main/default/objects/eRelease_Request__c/fields/Bug_QE__c.field-meta.xml
<CustomField>
    <fullName>Bug_QE__c</fullName>
    <label>Bug QE</label>
    <type>Email</type>
</CustomField>