force-app/main/default/objects/eRelease_Request__c/fields/Bug_Subject__c.field-meta.xml
<CustomField>
    <fullName>Bug_Subject__c</fullName>
    <formula>Bug_ID__r.Subject__c</formula>
    <label>Bug Subject</label>
    <type>Text</type>
</CustomField>