force-app/main/default/objects/eRelease_Request__c/fields/Checkin_Location__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Location__c</fullName>
    <defaultValue>&quot;The Release Manager will specify the checkin location for the fix and Scheduled Build to use for the checkin.&quot;</defaultValue>
    <inlineHelpText>The Release Manager will specify in this field the checkin location for the fix and the Scheduled Build to use for the checkin.</inlineHelpText>
    <label>Checkin Details</label>
    <type>TextArea</type>
</CustomField>