force-app/main/default/objects/eRelease_Request__c/fields/Customer_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact__c</fullName>
    <description>Describes the customer impact of the eRelease</description>
    <inlineHelpText>Describe the customer impact of the defect driving this request, including the impact that will result based on when and whether this eRelease is deployed.</inlineHelpText>
    <label>Customer Impact</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>