force-app/main/default/objects/eRelease_Request__c/fields/Deploy_to_all_Instances__c.field-meta.xml
<CustomField>
    <fullName>Deploy_to_all_Instances__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; if this fix is to be deployed to all instances. Otherwise, select &quot;No&quot; and specify instances that must receive this fix in the &quot;Target Instances&quot; field.</inlineHelpText>
    <label>Deploy to all Instances?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - all instances</fullName>
            </value>
            <value>
                <fullName>No - specific instances</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>