force-app/main/default/objects/eRelease_Request__c/fields/Do_the_number_of_Cases_meet_criteria__c.field-meta.xml
<CustomField>
    <fullName>Do_the_number_of_Cases_meet_criteria__c</fullName>
    <description>Evaluates the number of cases associated to the referenced Bug and displays whether it meets eRelease Request criteria.</description>
    <formula>IF( ISPICKVAL(Request_Type__c, &quot;Planned eRelease&quot;), 
&quot;Number of Cases not part of the Planned eRelease justification criteria.&quot;, 
IF(ISPICKVAL( Bug_ID__r.Priority__c , &quot;P0&quot;), 
&quot;Cases are not required for P0 defects&quot;, 
IF(Bug_ID__r.Number_of_Cases__c = 0, &quot;NO CASES: DOES NOT MEET CRITERIA&quot;, 
IF(Bug_ID__r.Number_of_Cases__c = 1, &quot;ONE CASE: MAY NOT MEET CRITERIA&quot;, 
TEXT(Bug_ID__r.Number_of_Cases__c) + &quot; CASES: MEETS CRITERIA&quot;))))</formula>
    <inlineHelpText>Displays whether the number of Cases associated to the referenced Bug meets the eRelease Request criteria.</inlineHelpText>
    <label>Do the number of Cases meet criteria?</label>
    <type>Text</type>
</CustomField>