force-app/main/default/objects/eRelease_Request__c/fields/eRelease_Status__c.field-meta.xml
<CustomField>
    <fullName>eRelease_Status__c</fullName>
    <inlineHelpText>NOTE: do not check in fix until this field is set to Approved and the Checkin Details are specified.</inlineHelpText>
    <label>eRelease Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Request Withdrawn</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>