force-app/main/default/objects/eRelease_Request__c/fields/Executive_Override__c.field-meta.xml
<CustomField>
    <fullName>Executive_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to denote when an exec overrides the decision of the release team.</description>
    <inlineHelpText>Check this box when the decision of the release team is overridden by executive decision.</inlineHelpText>
    <label>Executive Override</label>
    <type>Checkbox</type>
</CustomField>