force-app/main/default/objects/eRelease_Request__c/fields/Explanation_of_eRelease__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_eRelease__c</fullName>
    <description>Explanation of the need for an eRelease</description>
    <inlineHelpText>Please explain why this bug must be deployed in an eRelease.  Include sufficient justification (customer impact, defect severity, etc.) for the eRelease Request review panel to make an informed decision.</inlineHelpText>
    <label>Justification for eRelease Request</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>