force-app/main/default/objects/eRelease_Request__c/fields/Instance_for_Verification__c.field-meta.xml
<CustomField>
    <fullName>Instance_for_Verification__c</fullName>
    <inlineHelpText>If instances that are not the default verification instances must be used to verify this fix, provide instance or instances in this field.</inlineHelpText>
    <label>Verification Instance</label>
    <type>TextArea</type>
</CustomField>