force-app/main/default/objects/eRelease_Request__c/fields/Known_Fix__c.field-meta.xml
<CustomField>
    <fullName>Known_Fix__c</fullName>
    <inlineHelpText>Please indicate whether a fix is known, and readiness for checkin.</inlineHelpText>
    <label>Fix Known?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fix Known - Ready for checkin</fullName>
            </value>
            <value>
                <fullName>Fix Known - Not ready for checkin</fullName>
            </value>
            <value>
                <fullName>Fix Unknown - Under research</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>