force-app/main/default/objects/eRelease_Request__c/fields/Other_Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Deployment_Type__c</fullName>
    <description>Used when the request for Deployment Type includes &quot;Other.&quot;</description>
    <inlineHelpText>Use this field when the request for Deployment Type includes &quot;Other.&quot;</inlineHelpText>
    <label>Other Deployment Type</label>
    <type>TextArea</type>
</CustomField>