force-app/main/default/objects/eRelease_Request__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <label>Other Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>