force-app/main/default/objects/eRelease_Request__c/fields/Other_Testing__c.field-meta.xml
<CustomField>
    <fullName>Other_Testing__c</fullName>
    <inlineHelpText>Please specify testing details if &quot;None Required&quot; or &quot;Other&quot; selected.</inlineHelpText>
    <label>Testing Notes</label>
    <type>TextArea</type>
</CustomField>