force-app/main/default/objects/eRelease_Request__c/fields/Peripheral_Impacts__c.field-meta.xml
<CustomField>
    <fullName>Peripheral_Impacts__c</fullName>
    <inlineHelpText>Please explain any other peripheral impacts of this eRelease that may require follow-up.</inlineHelpText>
    <label>Peripheral Impacts</label>
    <type>TextArea</type>
</CustomField>