force-app/main/default/objects/eRelease_Request__c/fields/QA_Testing_Impact_Understood__c.field-meta.xml
<CustomField>
    <fullName>QA_Testing_Impact_Understood__c</fullName>
    <inlineHelpText>Please indicate if the QA testing impact is understood.  If you specify &quot;Yes,&quot; then the information in the Testing Required and Other Testing fields should be considered correct. If you specify &quot;No,&quot; then you must determine this as soon as possible.</inlineHelpText>
    <label>QA Testing Impact Understood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>