force-app/main/default/objects/eRelease_Request__c/fields/Released_In__c.field-meta.xml
<CustomField>
    <fullName>Released_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>After deployment has been completed, the Release Manager sets this field to the name of the Release where the code related to this request has been delivered.</inlineHelpText>
    <label>Released In</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>eRelease Requests</relationshipLabel>
    <relationshipName>eRelease_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>