force-app/main/default/objects/eRelease_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <inlineHelpText>Use &quot;Emergency Late Checkin&quot; for checkin requests after release freeze. 
Use &quot;Planned eRelease&quot; for scheduled eReleases. 
Use &quot;Emergency Release&quot; in all other cases.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Release</fullName>
            </value>
            <value>
                <fullName>Emergency Late Checkin</fullName>
            </value>
            <value>
                <fullName>Planned eRelease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>