force-app/main/default/objects/eRelease_Request__c/fields/Requested_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Deployment_Date__c</fullName>
    <label>Requested Deployment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>