force-app/main/default/objects/eRelease_Request__c/fields/Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Build__c</fullName>
    <description>Scheduled Build for the Bug for which the eRelease has been requested</description>
    <formula>Bug_ID__r.Scheduled_Build__r.Name</formula>
    <inlineHelpText>The Scheduled Build of this Bug</inlineHelpText>
    <label>Scheduled Build</label>
    <type>Text</type>
</CustomField>