force-app/main/default/objects/eRelease_Request__c/fields/Staging_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Staging_Instructions__c</fullName>
    <inlineHelpText>To be filled out by Release Manager</inlineHelpText>
    <label>Staging Instructions</label>
    <length>500</length>
    <type>Html</type>
</CustomField>