force-app/main/default/objects/eRelease_Request__c/fields/Target_Instances__c.field-meta.xml
<CustomField>
    <fullName>Target_Instances__c</fullName>
    <defaultValue>&quot;Specify target instances for this fix as a comma-separated list when not all instances are to receive this fix.&quot;</defaultValue>
    <inlineHelpText>Specify target instances for this fix as a comma-separated list when not all instances are to receive this fix.</inlineHelpText>
    <label>Target Instances</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>