force-app/main/default/objects/eRelease_Request__c/fields/Testing_Required__c.field-meta.xml
<CustomField>
    <fullName>Testing_Required__c</fullName>
    <inlineHelpText>Please indicate what type of testing is required for this change.</inlineHelpText>
    <label>Testing Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic ftest</fullName>
            </value>
            <value>
                <fullName>Entity Basic ftest</fullName>
            </value>
            <value>
                <fullName>Full ftest</fullName>
            </value>
            <value>
                <fullName>Extended ftest</fullName>
            </value>
            <value>
                <fullName>Selenium</fullName>
            </value>
            <value>
                <fullName>None required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>