force-app/main/default/objects/eRelease_Request__c/fields/Use_Default_Verification_Instance__c.field-meta.xml
<CustomField>
    <fullName>Use_Default_Verification_Instance__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; if the default verification instance can be used to verify this fix. Select &quot;No&quot; if a specific instance or instances must be used for verification. You must specify the verification instances when &quot;No&quot; is selected.</inlineHelpText>
    <label>Use Default Verification Instance?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>