force-app/main/default/objects/eRelease_Request__c/fields/Who_is_gack_watching__c.field-meta.xml
<CustomField>
    <fullName>Who_is_gack_watching__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specify who will be watching for gacks (or performing other stability monitoring) in production during the deployment of this fix.</inlineHelpText>
    <label>Who is gack-watching?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>eRelease_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>