force-app/main/default/objects/eRelease_Request__c/validationRules/Instances_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Instances_must_be_specified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Use_Default_Verification_Instance__c, &#39;No&#39;), ISBLANK(Instance_for_Verification__c))</errorConditionFormula>
    <errorDisplayField>Instance_for_Verification__c</errorDisplayField>
    <errorMessage>Verification instances must be specified when &quot;No&quot; selected for the &quot;Default Verification Instance?&quot; field.</errorMessage>
</ValidationRule>