force-app/main/default/objects/eRelease_Request__c/validationRules/Release_required_when_ERR_is_Released.validationRule-meta.xml
<ValidationRule>
    <fullName>Release_required_when_ERR_is_Released</fullName>
    <active>true</active>
    <errorConditionFormula>( Released_In__c = NULL)   &amp;&amp;  ISPICKVAL(eRelease_Status__c, &quot;Released&quot;)</errorConditionFormula>
    <errorDisplayField>Released_In__c</errorDisplayField>
    <errorMessage>Release must be specified when eRelease Status is &quot;Released&quot;</errorMessage>
</ValidationRule>